# ai-summarizer-api

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/core/: settings.py  urls.py
backend/text_processor/: consts.py  schema.py  schemas.py  urls.py  utils.py  views.py
backend/text_processor/tests/: test_views.py
containers/: backend.Dockerfile
